<resources>
    <string name="app_name">Aula10</string>
    <string name="title_activity_maps">Map</string>
    <string name="texto_segunda_via">Para utilizar os serviços de autoatendimento, tenha
    em mãos o código do imóvel impresso em sua conta de água.</string>
    <string name="insere_codigo">Insira o Código do Imóvel</string>
    <string name="codigo">Código do Imóvel</string>
    <string name="btn_consultar">Consultar</string>
    <string name="txt_abastecimento">Situação do abastecimento de água</string>
    <string name="digite_cidade">Digite a cidade...</string>
    <string name="codigo_imovel">Código do Imóvel</string>
    <string name="endereco">Endereço</string>
    <string name="faturas_aberto">Faturas em Aberto</string>
    <string name="selecione_fatura">Selecione uma fatura para emissão da segunda via da conta</string>
    <string name="data">05/2017</string>
    <string name="vencimento">Vencimento: 11/05/2017</string>
    <string name="valor">Valor: R$ 38,68</string>
    <string name="gerar_codigo"><a href="https://www.google.com/">Gerar código de barras</a></string>
    <string name="info_vazamento">Informações do Vazamento</string>
    <string-array name="tipo_vazamento">
        <item>	Água	</item>
        <item>	Esgoto	</item>
    </string-array>
    <string-array name="local_vazamento">
        <item>	Rua	</item>
        <item>	Imóvel	</item>
    </string-array>
    <string name="contato">Contato</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="enviar">Enviar</string>
</resources>