<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_fundo">

    <TextView
        android:id="@+id/textInfoVazamento"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:text="@string/info_vazamento"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorFont"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintVertical_bias="0.015"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textTipoVazamento"
        android:layout_width="0dp"
        android:textColor="@color/colorFont"
        android:layout_height="wrap_content"
        android:text="@string/tipo_vazamento"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInfoVazamento"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintVertical_bias="0.008"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Spinner
        android:id="@+id/combo_tipo"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textTipoVazamento"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:entries="@array/tipo_vazamento"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textLocalVazamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/local_vazamento"
        android:textColor="@color/colorFont"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/combo_tipo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintVertical_bias="0.014"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Spinner
        android:id="@+id/combo_local"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textLocalVazamento"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:entries="@array/local_vazamento"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.13" />

    <TextView
        android:id="@+id/textContato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contato"
        android:textColor="@color/colorFont"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/combo_local"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorFont"
        app:layout_constraintTop_toBottomOf="@+id/textContato"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintVertical_bias="0.017" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Ex.: Jaqueline Santos"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textNome"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textColor="@color/colorFont"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editNome"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Ex.: 51 988888888"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textTelefone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/enviar"
        android:textColor="@color/colorFont"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTelefone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:background="#01293b"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.428"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>